ros-sys/src/ros/ffi.rs

extern "C" {
    #[doc = " \\brief Resolves a name into a fully-qualified name"]
    #[doc = ""]
    #[doc = " Resolves a name into a fully qualified name, eg. \"blah\" =>"]
    #[doc = " \"/namespace/blah\". By default also applies any matching"]
    #[doc = " name-remapping rules (which were usually supplied on the command"]
    #[doc = " line at startup) to the given name, returning the resulting"]
    #[doc = " remapped name."]
    #[doc = ""]
    #[doc = " \\param name Name to remap"]
    #[doc = ""]
    #[doc = " \\param remap Whether to apply name-remapping rules"]
    #[doc = ""]
    #[doc = " \\return Resolved name."]
    #[doc = ""]
    #[doc = " \\throws InvalidNameException If the name begins with a tilde, or is an otherwise invalid graph resource name"]
    pub fn node_handle_resolveName(
        nh: *mut node_handle,
        name: *const ::std::os::raw::c_char,
        remap: bool,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " \\brief Subscribe to a topic, version for bare function"]
    #[doc = ""]
    #[doc = " This method connects to the master to register interest in a given"]
    #[doc = " topic.  The node will automatically be connected with publishers on"]
    #[doc = " this topic.  On each message receipt, fp is invoked and passed a shared pointer"]
    #[doc = " to the message received.  This message should \\b not be changed in place, as it"]
    #[doc = " is shared with any other subscriptions to this topic."]
    #[doc = ""]
    #[doc = " This version of subscribe is a convenience function for using bare functions, and can be used like so:"]
    #[doc = "\\verbatim"]
    #[doc = "void callback(const std_msgs::Empty::ConstPtr& message)"]
    #[doc = "{"]
    #[doc = "}"]
    #[doc = ""]
    #[doc = "ros::Subscriber sub = handle.subscribe(\"my_topic\", 1, callback);"]
    #[doc = "\\endverbatim"]
    #[doc = ""]
    #[doc = " \\param M [template] M here is the callback parameter type (e.g. const boost::shared_ptr<M const>& or const M&), \\b not the message type, and should almost always be deduced"]
    #[doc = " \\param topic Topic to subscribe to"]
    #[doc = " \\param queue_size Number of incoming messages to queue up for"]
    #[doc = " processing (messages in excess of this queue capacity will be"]
    #[doc = " discarded)."]
    #[doc = " \\param fp Function pointer to call when a message has arrived"]
    #[doc = " \\param transport_hints a TransportHints structure which defines various transport-related options"]
    #[doc = " \\return On success, a Subscriber that, when all copies of it go out of scope, will unsubscribe from this topic."]
    #[doc = " On failure, an empty Subscriber which can be checked with:"]
    #[doc = "\\verbatim"]
    #[doc = "void callback(const std_msgs::Empty::ConstPtr& message){...}"]
    #[doc = "ros::NodeHandle nodeHandle;"]
    #[doc = "ros::Subscriber sub = nodeHandle.subscribe(\"my_topic\", 1, callback);"]
    #[doc = "if (sub)  // Enter if subscriber is valid"]
    #[doc = "{"]
    #[doc = "..."]
    #[doc = "}"]
    #[doc = "\\endverbatim"]
    #[doc = "  \\throws InvalidNameException If the topic name begins with a tilde, or is an otherwise invalid graph resource name"]
    #[doc = "  \\throws ConflictingSubscriptionException If this node is already subscribed to the same topic with a different datatype"]
    pub fn node_handle_subscribe(
        nh: *mut node_handle,
        topic: *const ::std::os::raw::c_char,
        type_: *const ::std::os::raw::c_char,
        queue_size: u32,
        phantom_data: *const ::std::os::raw::c_void,
        cb: callback,
    ) -> *mut subscriber;
}
extern "C" {
    #[doc = " \\brief Advertise a topic, simple version"]
    #[doc = ""]
    #[doc = " This call connects to the master to publicize that the node will be"]
    #[doc = " publishing messages on the given topic.  This method returns a Publisher that allows you to"]
    #[doc = " publish a message on this topic."]
    #[doc = ""]
    #[doc = " This version of advertise is a templated convenience function, and can be used like so"]
    #[doc = ""]
    #[doc = "   ros::Publisher pub = handle.advertise<std_msgs::Empty>(\"my_topic\", 1);"]
    #[doc = ""]
    #[doc = " \\param topic Topic to advertise on"]
    #[doc = ""]
    #[doc = " \\param queue_size Maximum number of outgoing messages to be"]
    #[doc = " queued for delivery to subscribers"]
    #[doc = ""]
    #[doc = " \\param latch (optional) If true, the last message published on"]
    #[doc = " this topic will be saved and sent to new subscribers when they"]
    #[doc = " connect"]
    #[doc = ""]
    #[doc = " \\return On success, a Publisher that, when it goes out of scope,"]
    #[doc = " will automatically release a reference on this advertisement.  On"]
    #[doc = " failure, an empty Publisher."]
    #[doc = ""]
    #[doc = " \\throws InvalidNameException If the topic name begins with a"]
    #[doc = " tilde, or is an otherwise invalid graph resource name, or is an"]
    #[doc = " otherwise invalid graph resource name"]
    pub fn node_handle_advertise(
        nh: *mut node_handle,
        topic: *const ::std::os::raw::c_char,
        queue_size: u32,
        latch: bool,
    ) -> *mut publisher;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct single_threaded_spinner {
    _unused: [u8; 0],
}
extern "C" {
    pub fn single_threaded_spinner_create() -> *mut single_threaded_spinner;
}
extern "C" {
    pub fn single_threaded_spinner_destroy(sp: *mut single_threaded_spinner);
}
extern "C" {
    pub fn single_threaded_spinner_spin(sp: *mut single_threaded_spinner, cq: *mut callback_queue);
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct multi_threaded_spinner {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " \\param thread_count Number of threads to use for calling callbacks.   0 will"]
    #[doc = " automatically use however many hardware threads exist on your system."]
    pub fn multi_threaded_spinner_create(thread_count: u32) -> *mut multi_threaded_spinner;
}
extern "C" {
    pub fn multi_threaded_spinner_destroy(sp: *mut multi_threaded_spinner);
}
extern "C" {
    pub fn multi_threaded_spinner_spin(sp: *mut multi_threaded_spinner, cq: *mut callback_queue);
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct async_spinner {
    _unused: [u8; 0],
}
extern "C" {
    pub fn async_spinner_create(thread_count: u32) -> *mut async_spinner;
}
extern "C" {
    pub fn async_spinner_create_with_queue(
        thread_count: u32,
        cq: *mut callback_queue,
    ) -> *mut async_spinner;
}
extern "C" {
    pub fn async_spinner_destroy(sp: *mut async_spinner);
}
extern "C" {
    #[doc = " \\brief Start this spinner spinning asynchronously"]
    pub fn async_spinner_start(sp: *mut async_spinner);
}
extern "C" {
    #[doc = " \\brief Stop this spinner from running"]
    pub fn async_spinner_stop(sp: *mut async_spinner);
}
